pratical/final/ctfd/2021/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-2021-deployment
  namespace: ctfd
spec:
  replicas: 1
  selector:
    matchLabels:
      ctfd.2021.pod: ctfd-2021-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        ctfd.2021.pod: ctfd-2021-pod
    spec:
      nodeSelector:
        minikube.k8s.io/hostname: multinode-m03
      containers:
      - image: doombringerazurai/ctfd:1.0
        name: ctfd-2021
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: ctfd-2021-log-pvc
          mountPath: '/var/log/CTFd'
        - name: ctfd-2021-uploads-pvc
          mountPath: '/var/uploads'
        - name: ctfd-db-2021-secret
          mountPath: '/etc/ctfd-db'
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 60
      restartPolicy: Always
      tolerations:
        - key: 'type'
          operator: 'Equal'
          value: 'site'
          effect: 'NoSchedule'
      volumes:
      - name: ctfd-2021-log-pvc
        persistentVolumeClaim:
          claimName: ctfd-2021-log-pvc
      - name: ctfd-2021-uploads-pvc
        persistentVolumeClaim:
          claimName: ctfd-2021-uploads-pvc
      - name: ctfd-db-2021-secret
        secret:
          secretName: ctfd-db-2021
