pratical/final/ctfd/2021/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctfd-2021
  namespace: ctfd
spec:
  rules:
  - host: ctfssi-2021.test
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ctfd-2021-service
              port:
                number: 8000
